--- a/index.html
+++ b/index.html
@@ -34,6 +34,54 @@
         from { opacity: 0; transform: scale(0.95); }
         to { opacity: 1; transform: scale(1); }
       }
+      
+      /* Mobile UX Improvements */
+      button:active, label:active, [role="button"]:active {
+        transform: scale(0.97);
+        filter: brightness(0.9);
+        transition: transform 0.1s, filter 0.1s;
+      }
+
+      /* Custom Switch Component */
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 50px;
+        height: 28px;
+      }
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #4b5563; /* gray-600 */
+        transition: .4s;
+        border-radius: 28px;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 20px;
+        width: 20px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        transition: .4s;
+        border-radius: 50%;
+      }
+      input:checked + .slider {
+        background-color: #4f46e5; /* indigo-600 */
+      }
+      input:checked + .slider:before {
+        transform: translateX(22px);
+      }
     </style>
   <script type="importmap">
 {
